Fix critical warnings from Sonar
git-svn-id: https://svn.codehaus.org/mule/branches/mule-3.2.x@23293 bf997673-6b11-0410-b953-e057580c5b09